# bifrost

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
crates/bifrost-client/: Cargo.toml
crates/bifrost-client/src/: admin.rs  app.rs  cli.rs  conn.rs  dispatch.rs  lib.rs  main.rs  repl.rs
crates/bifrost-client/tests/: admin_socket.rs  app_lifecycle.rs
crates/bifrost-core/: Cargo.toml
crates/bifrost-core/src/: atomic_write.rs  config.rs  error.rs  events.rs  hub.rs  ids.rs  lib.rs  routes.rs  session.rs  transport.rs
crates/bifrost-core/tests/: hub_lifecycle.rs  session_states.rs
crates/bifrost-net/: Cargo.toml
crates/bifrost-net/src/: lib.rs  mock.rs  null.rs  traits.rs  types.rs
crates/bifrost-net/src/linux/: bridge.rs  mod.rs  platform.rs  sockopt.rs  tap.rs
crates/bifrost-net/tests/: mock_smoke.rs
crates/bifrost-proto/: Cargo.toml
crates/bifrost-proto/src/: admin.rs  codec.rs  error.rs  frame.rs  lib.rs  types.rs
crates/bifrost-proto/tests/: roundtrip.rs
crates/bifrost-server/: Cargo.toml
crates/bifrost-server/src/: accept.rs  admin.rs  cli.rs  conn.rs  dispatch.rs  lib.rs  main.rs  repl.rs
crates/bifrost-server/tests/: admin_socket.rs  server_e2e.rs
crates/bifrost-web/: Cargo.toml  build.rs
crates/bifrost-web/src/: api.rs  lib.rs  state.rs  static_files.rs  ws.rs
crates/bifrost-web/tests/: api_smoke.rs  api_writes.rs  static_fallback.rs  ws_metrics.rs
deploy/: client.toml.example  server.toml.example
deploy/systemd/: bifrost-client.service  bifrost-server.service
scripts/: build-cross.sh  deploy-client.sh  deploy-server.sh  tune-host.sh
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: InlineEdit.tsx  IpSegmentInput.tsx  Layout.tsx  SaveStatusChip.tsx  Sparkline.tsx  ThroughputCell.tsx  Toaster.tsx
web/src/components/graph/: DeviceNode.tsx  FloatingEdge.tsx  ServerNode.tsx  graphLayout.ts
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Switch.tsx  Table.tsx
web/src/lib/: api.ts  cn.ts  eventInvalidator.ts  format.ts  metrics.ts  toast.ts  types.ts  useUiLayout.ts  useWS.ts  ws.ts  wsClient.ts
web/src/views/: DeviceTable.tsx  DevicesAsGraph.tsx  DevicesAsTable.tsx  NetworkDetail.tsx  NetworkList.tsx  UnifiedGraphView.tsx  UnifiedView.tsx
