[package]
name = "bifrost-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bifrost VPN client — CLI binary + driver library"

[lib]
name = "bifrost_client"
path = "src/lib.rs"

[[bin]]
name = "bifrost-client"
path = "src/main.rs"

[dependencies]
bifrost-proto.workspace = true
bifrost-net.workspace   = true
bifrost-core.workspace  = true

anyhow.workspace             = true
clap.workspace               = true
futures.workspace            = true
rustyline.workspace          = true
tokio.workspace              = true
tokio-util                   = { workspace = true, features = ["codec"] }
tokio-socks.workspace        = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace               = true

[dev-dependencies]
bifrost-net = { workspace = true, features = ["mock"] }
tempfile    = "3"
futures.workspace = true
