[package]
name = "bifrost-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bifrost — Hub / Session state machine, config, transport"

[dependencies]
bifrost-proto.workspace = true
bifrost-net.workspace   = true

bytes.workspace      = true
serde.workspace      = true
toml.workspace       = true
uuid.workspace       = true
ipnet.workspace      = true
tokio.workspace      = true
tracing.workspace    = true
thiserror.workspace  = true
async-trait.workspace = true

[dev-dependencies]
bifrost-net  = { workspace = true, features = ["mock"] }
tokio        = { workspace = true, features = ["full", "test-util"] }
tempfile     = "3"
