[package]
name = "bifrost-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bifrost VPN protocol v1 — frame definitions and codec"

[dependencies]
bytes.workspace      = true
serde.workspace      = true
postcard.workspace   = true
uuid.workspace       = true
thiserror.workspace  = true
tokio                = { workspace = true, features = ["io-util"] }
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace   = true
futures.workspace = true
