[package]
name = "bifrost-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bifrost-core  = { workspace = true }
bifrost-proto = { workspace = true }

axum       = { version = "0.7", features = ["ws"] }
tokio      = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde      = { workspace = true }
serde_json = "1"
uuid       = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }

[dev-dependencies]
bifrost-net = { workspace = true, features = ["mock"] }
reqwest     = { version = "0.12", default-features = false, features = ["json"] }
tempfile    = "3"
