[package]
name = "bifrost-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bifrost-core  = { workspace = true }
bifrost-proto = { workspace = true }

axum       = { version = "0.7", features = ["ws"] }
tokio      = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde      = { workspace = true }
serde_json = "1"
uuid       = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }

# Embed the React WebUI build output into the binary. The folder is
# populated by `npm run build` in web/; build.rs writes a placeholder
# index.html when the dir doesn't exist yet so cargo can still compile
# (e.g. on a fresh clone before the frontend is built).
rust-embed  = "8"
mime_guess  = "2"

[dev-dependencies]
bifrost-net      = { workspace = true, features = ["mock"] }
reqwest          = { version = "0.12", default-features = false, features = ["json"] }
tempfile         = "3"
tokio-tungstenite = "0.24"
futures          = { workspace = true }
